<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:layout_height="fill_parent" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:gravity="center_horizontal" 
    	android:orientation="vertical">
        
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:text="@string/message" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:textSize="40dip" 
        	android:gravity="center_horizontal" 
        	android:layout_marginBottom="60dip" 
        	android:id="@+id/begininng">
        </TextView>
        
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:textSize="40dip" 
        	android:gravity="center_horizontal" 
        	android:id="@+id/middle" android:text="@string/blank">
        </TextView>
        
        <TextView 
        	android:layout_gravity="bottom" 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:layout_marginTop="60dip" 
        	android:text="@string/end_message" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:textSize="40dip" 
        	android:gravity="center_horizontal|bottom" 
        	android:id="@+id/end">
        </TextView>
        
        <Button 
        	android:layout_height="50dip" 
        	android:layout_marginTop="5dip" 
        	android:layout_width="150dip" 
        	android:text="@string/backMenu" 
        	android:id="@+id/back">
        </Button>
    
    </LinearLayout>

