<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:layout_height="fill_parent" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:gravity="center_horizontal" 
    	android:orientation="vertical">
        
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:textSize="40dip" 
        	android:gravity="center_horizontal" 
        	android:layout_marginBottom="60dip" android:id="@+id/final_begining" android:text="@string/final_message">
        </TextView>
        
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:textSize="40dip" 
        	android:gravity="center_horizontal" 
        	android:text="@string/blank" android:id="@+id/final_middle">
        </TextView>
        
        <Button 
        	android:layout_height="50dip" 
        	android:layout_width="150dip" 
        	android:text="@string/backMenu" 
        	android:id="@+id/back" 
        	android:layout_marginTop="150dip">
        </Button>
    
    </LinearLayout>

